Change duration and add async